--- a/latex/karen.tex
+++ b/latex/karen.tex
@@ -59,14 +59,15 @@
 \include{performance_analysis} 
 %\include{publications}
 
-%\include{conclusions}
+\include{conclusions}
 
 
 \appendix
-%\include{rbffd_avoid_pole_singularities}
+\include{rbffd_avoid_pole_singularities}
 %\include{rbffd_weights_on_sphere}
 \include{nvidia_figures}
 
+\include{outside_content}
 
 % The BibTeX bibliography/references section.  View the file
 % 'myrefs.bib' to get a feel for what these entries may look like.
