--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,21 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan Bollig at 2013-09-13 15:27:46 -0500 
+%% Created for Evan Bollig at 2013-09-15 23:32:24 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{NVidiaGPUMPI,
+	Author = {J. Kraus},
+	Date-Added = {2013-09-16 03:31:46 +0000},
+	Date-Modified = {2013-09-16 03:32:22 +0000},
+	Howpublished = {\url{https://developer.nvidia.com/content/introduction-cuda-aware-mpi}},
+	Month = {March},
+	Title = {An Introduction to CUDA-Aware MPI},
+	Year = {2013}}
 
 @manual{CudaGuide2013,
 	Date-Added = {2013-09-13 20:23:45 +0000},
