--- a/latex/rbffd_avoid_pole_singularities.tex
+++ b/latex/rbffd_avoid_pole_singularities.tex
@@ -13,11 +13,12 @@
 \chapter{Avoiding Pole Singularities with RBF-FD}
 This content follows \cite{FlyerWright07,FlyerWright09}. 
 
-Within the test cases of this dissertation, we solve convective PDEs on the unit sphere with the form: 
-$$
-\pd{h}{t} = \vu \cdot \nabla h
-$$
-where $\vu$ is velocity. For example, the cosine bell advection has this particular form:
+%Within the test cases of this dissertation, we solve convective PDEs on the unit sphere with the form: 
+%$$
+%\pd{h}{t} = \vu \cdot \nabla h
+%$$
+%where $\vu$ is velocity. For example, t
+Chapter~\ref{chap:applications} introduces cosine bell advection as
 \begin{equation}
 \pd{h}{t} = \frac{u}{\cos{\theta}} \pd{h}{\lambda} + v \pd{h}{\theta} \label{eq:cosine_bell_appendix}
 \end{equation}
@@ -30,15 +31,15 @@ z & = \sin{\theta}
 where $\theta \in (-\frac{\pi}{2}, \frac{\pi}{2})$ is the elevation angle and $\lambda \in (-\pi,\pi)$ is the azimuthal angle.
 Observe that as $\theta \rightarrow \pm \frac{\pi}{2}$, the $\frac{1}{\cos{\theta}}$ term goes to infinity as a discontinuity. 
 
-One of the many selling points for RBF-FD and other RBF methods is their ability analytically avoid pole singularities, which arise from the choice of coordinate system and not from the methods themselves. Since RBFs are inherently based on Euclidean distance between nodes, and not geodesic distance, it is said that they do not ``feel'' the effects of the geometry or recognize singularities naturally inherent in the coordinate system \cite{FlyerWright07}. 
+One of the many selling points for RBF-FD and other RBF methods is their ability analytically avoid pole singularities, which arise from the choice of coordinate system and not from the methods themselves. Since RBFs are based on Euclidean distance between nodes, and not the geodesic distance, it is said that they do not ``feel'' the effects of the geometry or recognize singularities naturally inherent in the coordinate system \cite{FlyerWright07}. 
 Here we demonstrate how pole singularities are analytically avoided with RBF-FD for cosine bell advection.  
 
 
-Let $r = || \vx - \vx_j ||$ be the Euclidean distance which is invariant of the coordinate system. In Cartesian coordinates, we have
+Let $r = || \vx - \vx_j ||$ be the Euclidean distance which is invariant of the coordinate system. In Cartesian coordinates, 
 $$
 r = \sqrt{(x-x_j)^2 + (y-y_j)^2 + (z-z_j)^2}.
 $$
-In spherical coordinates we have:
+In spherical coordinates,
 $$
 r = \sqrt{2(1-\cos{\theta}\cos{\theta_j}\cos{(\lambda-\lambda_j)} - \sin{\theta}\sin{\theta_j})}.
 $$
@@ -71,6 +72,7 @@ where now the system is completely free of singularities at the poles \cite{Flye
 
 We note that the expression $\cos{(\frac{\pi}{2})}$ evaluates on some systems to a very small number rather than zero (e.g., $6.1(10^{-17}$) on the Keeneland system with the GNU gcc compiler). The small value in turn allows $\frac{1}{\cos{\theta}}$ to evaluate to a large value (e.g., $1.6(10^{16})$) rather than ``inf" or ``NaN". A large value allows the cosine terms to cancel in double precision, whereas an ``inf'' or ``NaN'' would corrupt the numerics. Rather than avoid placing nodes at the poles, or assuming the machine will numerically cancel the singularities, it is preferred to use operators \ref{eq:dm_lambda}, \ref{eq:dm_theta} on the RHS of Equation~\ref{eq:rbffd_weight_system} to compute RBF-FD weights. 
 
+Also, canceling the cosine analytically causes the conditioning of the system to change slightly. The hyperviscosity parameters provided in Chapter~\ref{chap:applications} also function well for this case; however, their impact on the eigenvalue distributions is noticeably stronger resulting in a larger spread of eigenvalues in the left half-plane. 
 %
 %\ifstandalone
 %\bibliographystyle{plain}
