--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -163,6 +163,64 @@ We leverage the OpenCL language for functional portability.
 
 Our dedication to OpenCL is a hedged bet that the future architectures will merge in the middle between many and multi-core architectures with co-processors alongside CPUs. By selecting an open standard parallel programming language, we increase the likelihood for future support of our programs. 
 
+
+While the nomenclature used in this paper is typically associated with CUDA programming, the names \textit{thread} and \textit{warp} are used to clearly illustrate kernel execution in context of the NVidia specific hardware used in tests. OpenCL assumes a lowest common denominator of hardware capabilities to provide functional portability. However, intimate knowledge of hardware allows for better understanding of performance and optimization on a target architecture. For example, OpenCL assumes all target architectures are capable at some level of SIMD (Single Instruction Multiple Data) execution, but CUDA architectures allow for Single Instruction Multiple Thread (SIMT). SIMT is similar to traditional SIMD, but while SIMD immediately serializes on divergent operations, SIMT allows for a limited amount of divergence without serialization. 
+
+At the hardware level, a \textit{thread} executes instructions on the GPU. On Fermi level GPUs, groups of 32 threads are referred to as \textit{warps}. A warp is the unit of threads executed concurrently on a single \textit{multi-processor}. 
+In OpenCL (i.e., software), a collection of hardware threads performing the same instructions are referred to as a \textit{work-group} of \textit{work-items}. Work-groups execute as a collection of warps constrained to the same multiprocessor. Multiple work-groups of matching dimension are grouped into an \textit{NDRange}. The \textit{kernel} provides a master set of instructions
+for all threads in an NDRange \cite{OpenCL2009}. 
+
+
+NVidia GPUs have a tiered memory hierarchy related to the grouping of threads described above. 
+In multiprocessors, each computing core executes a thread with a limited set of registers. The number of registers varies with the generation of hardware, but always come in small quantities (e.g., 32K shared by all threads of a multiprocessor on the Fermi). Accessing registers is free, but keeping data in registers requires an effort to maintain balance between kernel complexity and the number of threads per block. Threads of a single work-group can share information within a multiprocessor through \textit{shared memory}. With only 48 KB 
+available per 
+multiprocessor \cite{CudaGuide2011}, shared memory is another fast but limited resource on the GPU. OpenCL refers to shared memory as \textit{local memory}. 
+Sharing information across multiprocessors is possible in \textit{global device memory}---the largest and slowest memory space on the GPU. To improve seek times into global memory, Fermi level architectures include L1 on each multiprocessor and a shared L2 cache for all multiprocessors.
+
+
+%\textit{constant} and \textit{texture} memory caches are available for read-only access. 
+%To use shared memory, 
+%Threads must 
+%explicitly copy intermediate computational results or data in and out. 
+
+%Shared memory is divided evenly into 16 \textit{memory 
+%banks} or 
+%regions of memory that can be accessed simultaneously. Memory and registers can be accessed equally fast as long as no two 
+%threads in the 
+%same half-warp (i.e., first 16 threads or last 16 threads of the warp) are accessing the same memory bank. If this occurs, the 
+%access is 
+%considered to be a \textit{bank conflict} and the multiprocessor is forced to serialize memory access, increasing the delay until 
+%the warp can 
+%proceed with execution \cite{CudaGuide:2008}. 
+
+%\begin{figure}[t] %  figure placement: here, top, bottom, or page
+%   \centering
+%   \includegraphics[width=4.5in]{../figures/paper1/figures/opencl_memory_model.pdf} 
+%   \caption{Comparison of GPU and CPU implementations underlying the OpenCL memory model for a single compute device.}
+%   \label{fig:opencl_memory}
+%\end{figure}
+%
+
+
+% and the place to which all data and kernels from the 
+%CPU are copied for 
+%execution. Note 
+%that multiprocessors maintain read-only \textit{caches} for \textit{constants} and \textit{textures}---constants are values that 
+%never change during kernel execution, 
+%while textures are interpreted as read only arrays and provide a sophisticated cache mechanisms for certain types of non-sequential access. The real memory for constants and textures is part of the global device 
+%memory, so reading 
+%from texture and constant memory is faster than reads from global memory when no cache misses \cite{CudaGuide:2008}. 
+%Also, if a kernel 
+%uses too many registers per thread, \textit{local memory} is reserved in the global device memory to temporarily store register 
+%contents for 
+%later use with an associated penalty in efficiency \cite{CudaGuide:2008}. 
+
+Under OpenCL, the equivalent to CUDA local memory is called \textit{private memory} and is also reserved read-only per work-item in global device memory. CUDA's shared memory is labeled \textit{local memory} and shared by threads of a work-group. The CUDA texture and constant caches are known as \textit{Global/Constant Cache}, and similar to CUDA, exist outside of developer control. OpenCL refers to \textit{global memory} and \textit{constant memory} when referring to read/write and read-only sections of CUDA's global device memory (respectively). Finally, CUDA textures are equivalent to OpenCL \textit{buffers} (1D arrays) or \textit{images} (2D/3D arrays) \cite{OpenCL:2009}.
+
+Based on \cite{Behr:2009, OpenCL:2009}, Figure~\ref{fig:opencl_memory} compares the underlying implementation of the OpenCL memory hierarchy on GPUs and CPUs. Notably, on current CPUs most of the memory is reserved in System RAM, whereas the hierarchy naturally fits on the deep memory hierarchy of the GPU. 
+
+
+
 \subsection{OpenCL vs CUDA}
 The market is volatile. Companies survive by investing margins in their next great product. If a product fails or the company faces a recall, their survival may come into question. Thus far, NVidia's CUDA has been wildly popular, but for the longest time (until May 2012) it was closed source. The closed source limited the language to NVidia hardware. As such, the OpenCL language gained popularity due to its support for AMD, Intel, mobile devices, web browsers, etc. NVidia's push to provide an open source compiler may be an attempt to regain the market share, but OpenCL appears to be on good footing. One other point: with an open source NVidia compiler, OpenCL can be optimized by the more mature NVidia compiler for their proprietary hardware. OpenCL compilers are also becoming more sophisticated at auto-optimization. 
 
