--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -995,11 +995,11 @@ The Preprocessing phase encompasses tasks such as grid setup/generation, stencil
 \end{algorithmic}
 \end{algorithm}
 
-The algorithm starts by loading/generating a grid. RBF-FD requires only node coordinates, and in some cases an indication of whether nodes are on a boundary. Information on mesh edges/connectivity is optional, but could be used to bypass stencil generation. The QueryNeighbors step forms stencils and constructs a directed adjacency matrix that indicates the connectivity of stencils. Either the grid or the adjacency matrix can be partitioned (see Chapter~\ref{chap:distributed_rbffd}) for distribution across multiple processors in the DecomposeDomain step. Finally, one or more processors operate independently to compute weights and assemble local DMs. The assumption in this work is that grids do not evolve in time, so DMs remain constant for the duration of the phase 2 (Application). In the event of moving nodes, weight calculation and DM assembly would move into the second phase and the method would become a Lagrangian particle method (e.g., \cite{SpH}). 
+The algorithm loads/generates a grid. RBF-FD requires only node coordinates, and in some cases an indication of whether nodes are on a boundary. Information on mesh edges/connectivity is optional, but could be used to bypass stencil generation. The QueryNeighbors step forms stencils and constructs a directed adjacency matrix that indicates the connectivity of stencils. Either the grid or the adjacency matrix can be partitioned (see Chapter~\ref{chap:distributed_rbffd}) for distribution across multiple processors in the DecomposeDomain step. Finally, one or more processors operate independently to compute weights and assemble local DMs. The assumption in this work is that grids do not evolve in time, so DMs remain constant for the duration of the phase 2 (Application). In the event of moving nodes, weight calculation and DM assembly would move into the loop in the second phase. 
 
 
 
-Once in the Application phase, the constructed DMs are applied to solve a PDE either explicitly (e.g., Equation~\ref{eq:explicit_dm}) or implicitly (e.g., Equation~\ref{eq:implicit_dm}). In the case of time-dependent PDEs, RBF-FD is applied the same as any classical FD method with a time-stepping scheme (represented by UpdateSolution). Examples of valid time-schemes include Runge-Kutta, Adams-Bashforth, and Crank Nicholson methods among many others. Based on the choice of time-scheme, one frequently needs multiple iterations through SolvePDE to assemble intermediate solutions that are weighted and combined in the the UpdateSolution step.
+Constructed DMs are applied to solve a PDE either explicitly (e.g., Equation~\ref{eq:explicit_dm}) or implicitly (e.g., Equation~\ref{eq:implicit_dm}). In the case of time-dependent PDEs, RBF-FD is applied the same as any classical FD method with a time-stepping scheme (represented by UpdateSolution). Examples of valid time-schemes include Runge-Kutta, Adams-Bashforth, and Crank Nicholson methods among many others. Based on the choice of time-scheme, one frequently needs multiple iterations through SolvePDE to assemble intermediate solutions that are weighted and combined in the the UpdateSolution step.
 
 %TODO: add refs for RBF-FD uses of these schemes. 
 %TODO: add CFL ref
@@ -1114,6 +1114,24 @@ Stable weight algorithms like Contour-Pad\'{e} \cite{Wright2003}, RBF-QR \cite{F
 \caption{Contours for $\epsilon$ as a function of $\sqrt{N}$ for stencil sizes $n=20$, 40, 60, 80 and 100 on the unit sphere. Contours assume near uniform distribution of nodes (e.g., maximum determinant (MD) nodes). Parameters superimposed above each contour provide coefficients for function $\epsilon(\sqrt{N}) = c_{1} \sqrt{N} - c_{2}$. }
 \label{fig:epsilon_contours}
 \end{figure}
+
+
+
+
+\section{Metrics} 
+
+The following chapters consider the parallelization of RBF-FD on GPUs, across multiple CPUs, and across multiple GPUs. In each case we assert that the code produces the same results. However, the time to solution differs, so we make use of the speedup metric: 
+$$ 
+S_{p} =\ ^{T_{\text{serial}}} /_{T_{\text{parallel}}}
+$$
+to monitor improvement in performance.
+
+
+%TODO: \authnote{Include efficiency}: 
+%$$ 
+%E_{p} =\ ^{S_{p}} /_{\# \text{\ of processors}}
+%$$
+
 
 
 
