--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -434,7 +434,7 @@ We compare the performance of our custom kernel to ViennaCL kernels (ELL, CSR, C
 
 ViennaCL allows control of the number of work-items for each kernel. 
 
-The library can tune itself to find the optimal number of work-items based on the device. 
+ViennaCL includes a set of auto-tuning options. %TODO: provide tuned parameters
 
 %TODO: what is profile for each GPU type
 %TODO: What is the significance of tuning on our problem $n=17, 31, 50, 101,$ etc. 
